[gd_scene load_steps=6 format=3 uid="uid://be6rwc42a7ajm"]

[ext_resource type="Script" path="res://Code/UI/SkillIcon.gd" id="1_n6qce"]
[ext_resource type="Texture2D" uid="uid://cgfberno8dje8" path="res://Assets/UI/skill_icon.png" id="1_xejlw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a0xwc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8vtsy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tucoe"]
texture = SubResource("CanvasTexture_8vtsy")
modulate_color = Color(0, 0, 0, 0.635294)

[node name="SkillIcon" type="Control"]
layout_mode = 3
anchor_left = 0.474
anchor_top = 0.454
anchor_right = 0.526
anchor_bottom = 0.546
offset_left = 49.9199
offset_top = 49.68
offset_right = -49.92
offset_bottom = -49.68
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
script = ExtResource("1_n6qce")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("1_xejlw")

[node name="CDProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = -49.0
offset_top = -49.0
offset_right = 49.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxEmpty_a0xwc")
theme_override_styles/fill = SubResource("StyleBoxTexture_tucoe")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="ChargeNumber" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 23.0
offset_right = 43.0
offset_bottom = 48.0
mouse_filter = 1
text = "ch"
visible_characters = 2
text_direction = 2
